# GP-MCU

./: .gitignore  CMakeLists.txt  CMakePresets.json  IconM.json  MCU Demo 458.gig  MCU Demo GP5.gig  MCU Extension.pptx  README.md  build.cmd  build.sh  mcu+labels.json
.github/workflows/: build.yml
src/: Buttons.cpp  CMakeLists.txt  Display.cpp  Faders.cpp  General_Utils.cpp  General_Utils.h  Inputs.cpp  LibMain.cpp  LibMain.h  MCU_Buttons.h  MCU_Classes.h  MCU_Colors.h  MCU_Constructs.h  Mackie Control Unit Protocol Extension.docx  P1 Extensions.cpp  Songlist.cpp  build.sh  howto.txt
